--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-screens": "^4.9.2",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -35,6 +42,7 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
